# relaxit

./: .buildinfo  .gitignore  PLANNING.md  README.md  README.rst  _config.yml  distributions.html  experiments.ipynb  genindex.html  index.html  info.html  install.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  relaxit.distributions.html  relaxit.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  train.html
.doctrees/: distributions.doctree  environment.pickle  index.doctree  info.doctree  install.doctree  installation.doctree  modules.doctree  quickstart.doctree  relaxit.distributions.doctree  relaxit.doctree  train.doctree
_modules/: index.html
_sources/: index.rst.txt  install.md.txt  quickstart.md.txt  relaxit.distributions.rst.txt  train.rst.txt
basic/: approx.ipynb  basic_code.ipynb  experiments.ipynb  invertible_gaussian.ipynb  reinforce.ipynb
demo/: .gitignore  README.md  demo.ipynb  environment.yml  laplace-bridge.ipynb  my_requirements.txt  quickstart.ipynb  reinforce.ipynb  reinforce.py  requirements.txt  rl_bench_demo.ipynb  vae.py  vae_CustomNormal.py  vae_bernoulli.py  vae_categorical.py  vae_correlated_bernoulli.py  vae_decoupled_straight_through_gumbel_softmax.py  vae_gaussian.py  vae_gaussian_bernoulli.py  vae_generalized_gumbel_geometric.py  vae_generalized_gumbel_poisson.py  vae_generalized_gumbel_softmax.py  vae_gumbel_softmax_topk.py  vae_hard_concrete.py  vae_invertible_gaussian.py  vae_rebar_relaxation.py  vae_stochastic_times_smooth.py  (+3 more)
docs/: conf.py  (+3 more)
(+81 files in other folders)
